# sentiment_analysis_api

./: .gitignore  README.md  docker-compose.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/api/: main.py  settings.py
backend/api/models/pytorch/: inference.py  model.py
backend/api/models/scikit_learn/: inference.py  model.py  train.py
backend/api/models/scikit_learn/weights/vectorizer/: best.pkl
backend/api/routes/: app_routes.py  rest_api_routes.py
backend/api/schemas/: request_schemas.py  response_schemas.py
backend/api/utils/: preprocessing.py
data/: test_data.csv  train_data.csv  val_data.csv
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: sentiment_analyser.tsx
roughwork/: approach_1_output.txt  eda.ipynb  sklearn_sentiment_analysis.ipynb
