[tool.poetry]
name = "ml-fastapi"
version = "0.1.0"
description = "Internship Task specified by TrueFoundry ftlisted candidates"
authors = ["Anuran Roy <anuranroy02@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ml_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
scikit-learn = "^1.2.0"
uvicorn = "^0.20.0"
nltk = "^3.8"
torch = "^1.13.1"
torchtext = "^0.14.1"
python-dotenv = "^0.21.0"
pandas = "^1.5.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.11.3"
black = "^22.12.0"
pytest = "^7.2.0"
nox = "^2022.11.21"
coverage = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
